kubernetes/email.yaml
---
# generated from email/docker-compose.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: email-backend
  name: email-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: email-backend
  template:
    metadata:
      labels:
        io.kompose.service: email-backend
    spec:
      containers:
        - env:
            - name: BOOTSTRAP_SERVICE
              valueFrom:
                secretKeyRef:
                  name: kafka-secrets
                  key: BOOTSTRAP_SERVICE
            - name: EMAIL_HOST
              valueFrom:
                secretKeyRef:
                  name: mail-secrets
                  key: EMAIL_HOST
            - name: EMAIL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mail-secrets
                  key: EMAIL_PASSWORD
            - name: EMAIL_PORT
              valueFrom:
                secretKeyRef:
                  name: mail-secrets
                  key: EMAIL_PORT
            - name: EMAIL_USERNAME
              valueFrom:
                secretKeyRef:
                  name: mail-secrets
                  key: EMAIL_USERNAME
            - name: GROUP_ID
              value: myGroup
            - name: KAFKA_TOPIC
              value: email_topic
            - name: SASL_MECHANISMS
              value: PLAIN
            - name: SASL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: kafka-secrets
                  key: SASL_PASSWORD
            - name: SASL_USERNAME
              valueFrom:
                secretKeyRef:
                  name: kafka-secrets
                  key: SASL_USERNAME
            - name: SECURITY_PROTOCOL
              value: SASL_SSL
          image: gcr.io/platinum-snow-289105/email:latest
          name: email-backend
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
