kubernetes/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: admin-backend
  name: admin-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin-backend
  template:
    metadata:
      labels:
        io.kompose.service: admin-backend
    spec:
      containers:
        - args:
            - /bin/bash
            - -c
            - python manage.py wait_for_db && python manage.py runserver 0.0.0.0:8000
          image: gcr.io/platinum-snow-289105/admin:latest
          name: admin-backend
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: admin-queue
  name: admin-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin-queue
  template:
    metadata:
      labels:
        io.kompose.service: admin-queue
    spec:
      containers:
        - args:
            - /bin/bash
            - -c
            - python manage.py wait_for_db && python consumer.py
          image: gcr.io/platinum-snow-289105/admin:latest
          name: admin-queue
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: admin-backend
  name: admin-backend
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 8000
  selector:
    io.kompose.service: admin-backend
