kubernetes/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: users-backend
  name: users-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: users-backend
  template:
    metadata:
      labels:
        io.kompose.service: users-backend
    spec:
      containers:
        - env:
            - name: DB_DATABASE
              value: # data
            - name: DB_HOST
              value: # sql private ip
            - name: DB_PASSWORD
              value: # password
            - name: DB_PORT
              value: # port
            - name: DB_USERNAME
              value: # username
          image: gcr.io/platinum-snow-289105/users:latest
          name: users-backend
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: users-backend
  name: users-backend
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8000
  selector:
    io.kompose.service: users-backend
